upload tesi finale + pdf

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,11 +1,126 @@
-@book{womak:lean-thinking,
-    author  = {James P. Womack, Daniel T. Jones},
-    title   = {Lean Thinking, Second Editon},
-    publisher = {Simon \& Schuster, Inc.},
-    year    = {2010}
+% @book{womak:lean-thinking,
+%     author  = {James P. Womack, Daniel T. Jones},
+%     title   = {Lean Thinking, Second Editon},
+%     publisher = {Simon \& Schuster, Inc.},
+%     year    = {2010}
+% }
+
+% @online{site:agile-manifesto,
+%     title   = {Manifesto Agile},
+%     url     = {http://agilemanifesto.org/iso/it/}
+% }
+
+% bibliografia
+
+% @book{schafer:elaborazione-numerica,
+%   title =     {Elaborazione numerica dei segnali 1},
+%   author =    {A. V. Oppenheim, R. W. Schafer},
+%   publisher = {Franco Angeli},
+%   isbn =      {9788820430061; 8820430061},
+%   year =      {1985},
+%   edition =   {3}
+% }
+
+@book{white-leouie:theaudiodictionary,
+   title =     {The Audio Dictionary},
+   author =    {Glenn D. White, Gary J. Louie},
+   publisher = {University of Washington Press},
+   isbn =      {0-295-98498-8},
+   year =      {2005},
+   edition =   {3}
 }
 
-@online{site:agile-manifesto,
-    title   = {Manifesto Agile},
-    url     = {http://agilemanifesto.org/iso/it/}
+@book{puckette:theoryandtechniqueofelectronicmusic,
+   title =     {The Theory and Technique of Electronic Music},
+   author =    {Miller Puckette},
+   publisher = { World Scientific Publishing Co. Pte. Ltd.},
+   year =      {2006}
+}
+
+@book{burk-polansky-repetto-roberts-rockmore:musicandcomputers,
+   title =     {Music and Computers},
+   author =    {P. Burk, L. Polansky, D. Repetto},
+   publisher = {Key College Puslishing},
+   isbn =      {1-930190-95-6},
+   year =      {2005},
+}
+
+@book{davis-jones:soundreinforcement,
+   title =     {The Sound Reinforcement Handbook},
+   author =    {G. Davis, R. Jones},
+   publisher = {Yamaha},
+   isbn =      {9780881889000},
+   year =      {1989},
+   edition =   {2}
+}
+
+@book{kleiner:acousticsaudiotech,
+   title =     {Acoustics and Audio Technology},
+   author =    {M. Kleiner},
+   publisher = {J. Ross Publishing},
+   isbn =      {9781604270525, 1604270527},
+   year =      {2011},
+   edition =   {3},
+}
+
+% sitografia
+
+@online{site:UseCase,
+    url     = {https://www.math.unipd.it/~rcardin/swea/2021/Diagrammi Use Case_4x4.pdf},
+    title   = {Casi D'uso},
+}
+
+@online{site:toolbox,
+    url     = {https://kilohearts.com/products/kilohearts_toolbox},
+    title   = {Kilohearts Toolbox},
+}
+
+@online{site:trash2,
+    url     = {https://www.izotope.com/en/products/trash.html},
+    title   = {Izotope Trash 2},
+}
+
+@online{site:slewlimiter,
+    url     = {https://library.vcvrack.com/Befaco/SlewLimiter},
+    title   = {Befaco Slew Limiter},
+}
+
+@online{site:cplusplus,
+    url     = {https://www.cplusplus.com/info/description/},
+    title   = {C++ features},
+}
+
+@online{site:juce,
+    url     = {https://juce.com/},
+    title   = {JUCE website},
+}
+
+@online{site:vst,
+    url     = {https://www.steinberg.net/technology/},
+    title   = {Steinberg VST website},
+}
+
+@online{site:software-libero,
+    url     = {https://www.gnu.org/philosophy/free-sw.html},
+    title   = {Definizione di software libero},
+}
+
+@online{site:gpl,
+    url     = {https://www.gnu.org/licenses/quick-guide-gplv3.html},
+    title   = {Licenza GPL e GPLv3},
+}
+
+@online{site:mit,
+    url     = {https://choosealicense.com/licenses/mit/},
+    title   = {Licenza MIT},
+}
+
+@online{site:bsd,
+    url     = {https://www.gnu.org/licenses/license-list.html#ModifiedBSD},
+    title   = {Licenza BSD modificata},
+}
+
+@online{site:saturn2,
+    url     = {https://www.fabfilter.com/products/saturn-2-multiband-distortion-saturation-plug-in},
+    title   = {Fabfilter Saturn 2},
 }
