--- a/capitoli/capitolo-5.tex
+++ b/capitoli/capitolo-5.tex
@@ -3,43 +3,21 @@
 % !TEX root = ../tesi.tex
 
 %**************************************************************
-\chapter{Progettazione e codifica}
-\label{cap:progettazione-codifica}
+\chapter{Conclusioni}
+\label{cap:conclusioni}
 %**************************************************************
-
-\intro{Breve introduzione al capitolo}\\
-
-%**************************************************************
-\section{Tecnologie e strumenti}
-\label{sec:tecnologie-strumenti}
-
-Di seguito viene data una panoramica delle tecnologie e strumenti utilizzati.
-
-\subsection*{Tecnologia 1}
-Descrizione Tecnologia 1.
-
-\subsection*{Tecnologia 2}
-Descrizione Tecnologia 2
+\section{Analisi del lavoro svolto}
+Il lavoro necessario alla realizzazione della tesi di laurea è risultato molto interessante e stimolante. La prima parte di esso, prevedendo uno studio sul fenomeno della distorsione del segnale audio, mi ha permesso di approfondire un concetto creativamente molto importante, in modo tale da poterlo applicare con criterio nell'implementazione degli algoritmi presenti nel software \textit{Biztortion}. \\
+La realizzazione del software in questione è risultata la parte più entusiasmante in quanto ha permesso di acquisire a livello pratico nuove abilità e competenze, oltre a consolidare quelle già possedute. \\
+Il mio percorso di studi è risultato fondamentale per un corretto sviluppo del \gls{pluging} audio; infatti il mio background accademico mi ha fornito le conoscenze di base legate all'\textit{informatica musicale} (come per esempio l'audio digitale, il \gls{dspg} e i filtri digitali) necessarie per un corretto approccio all'audio programming. Inoltre la mia carriera universitaria, legata alle scienze informatiche, ha reso possibile una buona analisi del problema e progettazione del software ancora prima di iniziare la fase di codifica, oltre che ad un rapido apprendimento autonomo delle tecnologie necessarie allo sviluppo del \gls{pluging} stesso. In particolare ho potuto apprezzare una certa rapidità di scrittura del codice grazie all'esperienza con la programmazione ad oggetti e con il linguaggio di programmazione C++, maturata durante il corso universitario di \textit{Programmazione ad Oggetti}. Un ulteriore merito va dato inoltre al corso universitario di \textit{Ingegneria del Software}, il quale mi ha dato le competenze necessarie ad una gestione efficiente ed efficace di un progetto software, oltre alla conoscenza degli strumenti legati alla stesura del presente documento.
 
 %**************************************************************
-\section{Ciclo di vita del software}
-\label{sec:ciclo-vita-software}
+\section{Conoscenze acquisite}
+Lo sviluppo del software \textit{Biztortion} mi ha permesso di interfacciarmi per la prima volta con il mondo della programmazione per l'audio, consentendomi di imparare in modo rapido e molto concreto alcune \textit{tecnologie} ad asso legate come i formati VST/AU e il framework JUCE, il quale risulta molto popolare e utile anche per iniziare una carriera nel relativo ambito lavorativo. \\
+Inoltre entrando nell'ottica dell'audio programming ho avuto la possibilità di \textit{comprendere meglio le problematiche} legate a questa professione: in particolare ho verificato in prima persona l'impatto che le performance fornite sia dall'hardware che dal software hanno con la produzione del suono, rendendole fondamentali sia per l'elaborazione del segnale audio in tempo reale che per semplicemente evitare che le strumentazioni analogiche si possano danneggiare a causa di una produzione di click nell'audio in uscita. \\
+Infine è stato molto interessante l'approfondimento effettuato sulle \textit{licenze software} e sulle tecnologie \gls{opensourceg}, risultate come uno strumento molto potente e di fondamentale importanza per tutti gli sviluppatori in modo tale che possano dare valore aggiunto all'intera community.
 
 %**************************************************************
-\section{Progettazione}
-\label{sec:progettazione}
-
-\subsubsection{Namespace 1} %**************************
-Descrizione namespace 1.
-
-\begin{namespacedesc}
-    \classdesc{Classe 1}{Descrizione classe 1}
-    \classdesc{Classe 2}{Descrizione classe 2}
-\end{namespacedesc}
-
-
-%**************************************************************
-\section{Design Pattern utilizzati}
-
-%**************************************************************
-\section{Codifica}
+\section{Valutazione personale}
+In conclusione ritengo che questo periodo, dedicato al lavoro per la tesi di laurea, mi abbia permesso di conoscere meglio e migliorare le mie capacità informatiche e di gestione delle tempistiche in modo autonomo. \\
+Il lavoro svolto è stato molto interessante, stimolante ed appagante in quanto mi ha permesso un primo assaggio della parte tecnica del lavoro di un \textit{audio programmer}, motivandomi ulteriormente nel cercare di cominciare una carriera in questo ambito lavorativo.
