--- a/inizio-fine/colophon.tex
+++ b/inizio-fine/colophon.tex
@@ -13,6 +13,7 @@
 
 \vfill
 
-\noindent\myName: \textit{\myTitle,}
+\noindent \myName: Matricola 12424 \\ \\
+\noindent \textit{\myTitle,}
 \myDegree,
 \textcopyright\ \myTime.
