--- a/inizio-fine/frontespizio.tex
+++ b/inizio-fine/frontespizio.tex
@@ -9,29 +9,29 @@
 
 \begin{center}
 
-\begin{LARGE}
-\textbf{\myUni}\\
-\end{LARGE}
+%\begin{LARGE}
+%\textbf{\myUni}\\
+%\end{LARGE}
 
 \vspace{10pt}
+\begin{figure}[htbp]
+\begin{center}
+\includegraphics[height=6cm]{logo_pollini_tesi}
+\end{center}
+\end{figure}
+\vspace{10pt} 
 
-\begin{Large}
-\textsc{\myDepartment}\\
-\end{Large}
-
-\vspace{10pt}
+%\vspace{10pt}
+% \begin{Large}
+% \textsc{\myDepartment}\\
+% \end{Large}
+%\vspace{10pt}
 
 \begin{large}
 \textsc{\myFaculty}\\
 \end{large}
 
-\vspace{30pt}
-\begin{figure}[htbp]
-\begin{center}
-\includegraphics[height=6cm]{logo-unipd}
-\end{center}
-\end{figure}
-\vspace{30pt} 
+% img position
 
 \begin{LARGE}
 \begin{center}
@@ -42,28 +42,40 @@
 \vspace{10pt} 
 
 \begin{large}
-\textsl{\myDegree}\\
+
+\noindent \textsl{\DCPL}
+
 \end{large}
 
-\vspace{40pt} 
+\vspace{10pt} 
 
 \begin{large}
+
 \begin{flushleft}
-\textit{Relatore}\\ 
-\vspace{5pt} 
-\profTitle \myProf
+\textit{Diplomando}\\ 
+\myName
 \end{flushleft}
 
 \vspace{0pt} 
 
+\begin{flushleft}
 \begin{flushright}
-\textit{Laureando}\\ 
-\vspace{5pt} 
-\myName
+\textit{Matricola}\\ 
+12424
 \end{flushright}
+\end{flushleft}
+
+\vspace{0pt} 
+
+\begin{flushleft}
+\textit{Relatore}\\ 
+\profTitle \myProf
+\end{flushleft}
+
 \end{large}
 
-\vspace{40pt}
+%\vspace{40pt}
+\vspace{0pt}
 
 \line(1, 0){338} \\
 \begin{normalsize}
