--- a/inizio-fine/sommario.tex
+++ b/inizio-fine/sommario.tex
@@ -15,21 +15,10 @@
 
 \chapter*{Sommario}
 
-Il presente documento descrive il lavoro svolto durante il periodo di stage, della durata di circa trecento ore, dal laureando Gabriel Bizzo presso l'azienda Sync Lab S.r.l.
-Gli obbiettivi da raggiungere erano molteplici.\\
-
-In primo luogo era richiesto lo sviluppo di ...
-In secondo luogo era richiesta l'implementazione di un ... 
-
-Terzo ed ultimo obbiettivo era l'integrazione ...
-
-%\vfill
-%
-%\selectlanguage{english}
-%\pdfbookmark{Abstract}{Abstract}
-%\chapter*{Abstract}
-%
-%\selectlanguage{italian}
+Il presente documento descrive il lavoro svolto per la tesi da parte del laureando Gabriel Bizzo. Il lavoro prevede l'approfondimento della distorsione di un segnale audio come effetto desiderato, utilizzabile sia a scopo creativo che tecnico per la produzione musicale. \\
+Lo studio in questione prevede un'iniziale ricerca a livello teorico sui principi, sulle diverse tipologie di distorsione possibili e l'analisi di alcune implementazioni digitali esistenti di questo fenomeno. \\
+Successivamente nel documento viene descritta la realizzazione del processore di segnale audio digitale denominato \textit{Biztortion}, il quale implementa diversi algoritmi di distorsione del segnale, sia strettamente legati al mondo digitale che come emulazione di fenomeni analogici, come singoli moduli concatenabili a piacere in un'unica semplice interfaccia grafica. \\
+Infine viene presentata una panoramica sulle licenze software, identificando quelle utilizzate dalle librerie esterne come condizione per il loro utilizzo e definendo la licenza utilizzata per il rilascio del software sopraccitato.
 
 \endgroup			
 
