--- a/tesi-config.tex
+++ b/tesi-config.tex
@@ -8,25 +8,29 @@
 
 % Autore
 \newcommand{\myName}{Gabriel Bizzo}                                    
-\newcommand{\myTitle}{Confronto tra Angular e React nella realizzazione di una piattaforma di e-Voting}
+\newcommand{\myTitle}{Distorsione: implementazione di un processore di segnale audio digitale per la ricerca e lo studio del fenomeno}
+
+% Extra                
+\newcommand{\DCPL}{DCPL: 34}
+\newcommand{\DCSL}{DCSL: 34}
 
 % Tipo di tesi                   
-\newcommand{\myDegree}{Tesi di laurea triennale}
+\newcommand{\myDegree}{Tesi di diploma accademico di I livello}
 
 % Università             
-\newcommand{\myUni}{Università degli Studi di Padova}
+\newcommand{\myUni}{Conservatorio Cesare Pollini}
 
 % Facoltà       
-\newcommand{\myFaculty}{Corso di Laurea in Informatica}
+\newcommand{\myFaculty}{Tesi di diploma accademico di I livello in Musica Elettronica indirizzo tecnico di sala di registrazione}
 
 % Dipartimento
-\newcommand{\myDepartment}{Dipartimento di Matematica "Tullio Levi-Civita"}
+\newcommand{\myDepartment}{Dipartimento di Musica Elettronica}
 
 % Titolo del relatore
-\newcommand{\profTitle}{Prof.}
+\newcommand{\profTitle}{Prof. }
 
 % Relatore
-\newcommand{\myProf}{Gilberto Filè}
+\newcommand{\myProf}{Julian Scordato}
 
 % Luogo
 \newcommand{\myLocation}{Padova}
@@ -35,7 +39,7 @@
 \newcommand{\myAA}{2020-2021}
 
 % Data discussione
-\newcommand{\myTime}{Settembre 2021}
+\newcommand{\myTime}{Novembre 2021}
 
 
 %**************************************************************
@@ -242,7 +246,7 @@
 
 \newcommand{\usecaseactors}[1]{\textbf{\\Attori Principali:} #1. \vspace{4pt}}
 \newcommand{\usecasepre}[1]{\textbf{\\Precondizioni:} #1. \vspace{4pt}}
-\newcommand{\usecasedesc}[1]{\textbf{\\Descrizione:} #1. \vspace{4pt}}
+\newcommand{\usecasedesc}[1]{\textbf{\\Descrizione:} #1 \vspace{4pt}}
 \newcommand{\usecasepost}[1]{\textbf{\\Postcondizioni:} #1. \vspace{4pt}}
 \newcommand{\usecasealt}[1]{\textbf{\\Scenario Alternativo:} #1. \vspace{4pt}}
 
